Added the website loader, that will call the contract and load his content

--- a/websiteToStore.html
+++ b/websiteToStore.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Hey, i'm a website loaded from the blockchain !</h1>
-    <p>More infos here :</p>
+    <p>More infos here : https://github.com/Synoyx/website_from_blockchain</p>
   </body>
 </html>
